replace observables with signals

--- a/src/app/pages/auth/chat-room/chat-room.component.html
+++ b/src/app/pages/auth/chat-room/chat-room.component.html
@@ -1,6 +1,6 @@
 <div>
-  @for (message of messages; track message.id) {
-    <ul> ( {{message.date | date:'HH:mm' }} ) {{(message.Sender | async)?.name}}: {{message.content}}</ul>
+  @for (message of messageStore.entities(); track message.id) {
+    <ul> ( {{message.date | date:'HH:mm' }} ) {{message.Sender.name}}: {{message.content}}</ul>
   } @empty {
     <li> Il n'y a pas encore de messages </li>
   }
