--- a/src/app/pages/public/user-create/user-create.component.html
+++ b/src/app/pages/public/user-create/user-create.component.html
@@ -1,3 +1,8 @@
-<label for="username">Username:</label>
-<input type="text" id="username" [formControl]="newUserForm" (keyup.enter)="createUser()">
-<button (click)="createUser()">Create User</button>
+<div>
+  <label for="username">Username:</label>
+  <input type="text" id="username" [formControl]="newUserForm" (keyup.enter)="createUser()">
+  <button (click)="createUser()">Create User</button>
+</div>
+@if (newUserForm.getError('required') && newUserForm.dirty){
+  <p>Le nom d'utilisateur est obligatoire</p>
+}
